syntax = "proto3";
package greeter;

option java_multiple_files = true;
option java_package = "com.whatalokation.grpc.client.greeter";
option java_outer_classname = "GreeterProto";
option objc_class_prefix = "SE";

message HealthCheckRequest {
}

message HealthCheckResponse {
  string message = 1;
}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc healthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

